# cor

./: cor.ml  cor.opam  corjs.ml  dune  dune-project  libcor.ml  libcor.mli
experiments/compose_fx/: compose_fx.ml
experiments/compose_fx/test/: cons-map.roc  lambda-set-captures-call-recursive.roc  lambda-set-recursive-call.roc  map-int.roc  poly-call-with-guarded-poly-lambda.roc  roc-issue-5464-infer.roc
experiments/easy_tags/: easy_tags.ml
experiments/lss/: dune  lss.ml
experiments/lss/canonical/: ast.ml  dune  lower.ml  print.ml
experiments/lss/canonical_solved/: dune  lower.ml
experiments/lss/eval/: dune  memory.ml  readback.ml  runtime.ml
experiments/lss/ir/: ast.ml  ctx.ml  dune  layout.ml  layout_print.ml  lower.ml  lower_type.ml  print.ml
experiments/lss/lambdamono/: ast.ml  ctx.ml  dune  lower.ml  lower_type.ml  print.ml  specializations.ml  type.ml  type_clone_inst.ml  type_print.ml
experiments/lss/lambdasolved/: ast.ml  ctx.ml  defs_graph.ml  dune  inst.ml  lower.ml  print.ml  solve.ml  type.ml  type_print.ml
experiments/lss/monotype/: ast.ml  dune  lower.ml  lower_type.ml  print.ml  specializations.ml  type.ml  type_clone_inst.ml  type_print.ml
experiments/lss/monotype_lifted/: ast.ml  ctx.ml  dune  lower.ml  print.ml
experiments/lss/symbol/: dune  symbol.ml
experiments/lss/syntax/: ast.ml  ast_print.ml  dune  parser.mly  query.ml  type.ml  type_print.ml
experiments/lss/test/: capture-recursive-function.roc  generic-higher-order-call.roc  (+3 more)
experiments/refine/: refine.ml
experiments/uls/: uls.ml
roc/: dune  language.ml  roc.ml
(+15 files in other folders)
