(menhir
  (flags --explain --fixed-exception --no-dollars)
  (modules parser))

(library
 (name language)
 (modules language)
 (preprocess
  (pps ppx_deriving.show)))

(library
 (name roc)
 (modules roc syntax lexer parser util)
 (libraries language sedlex menhirLib)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test sedlex.ppx ppx_deriving.show)))
